fix author hide visibility and change color

--- a/design/ourhidecomments.css
+++ b/design/ourhidecomments.css
@@ -7,6 +7,6 @@ li.HiddenComment {
 }
 
 .HiddenComment.HiddenCommentAdmin {
-    color: red;
+    color: #BBBBBB;
     text-decoration: line-through;
 }
